--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongoose": "^8.4.3",
     "nanoid": "^5.0.7",
